# Photon

./: CMakeLists.txt  README.md
include/: general.h  glad.h  image.h  interval.h  math.h  object.h  object_list.h  ray.h  renderer.h  shapes.h
src/: glad.c  main.cpp  object_list.cpp  ray.cpp  renderer.cpp
